<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuizApp</string>
    <string name="title_1">title_!</string>
    <string name="quizz_app">Quizz App</string>
    <string name="next">NEXT</string>
    <string name="_15_2022323232323">15/20</string>
    <string name="share_your_score">Share Your Score</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="or">or</string>

    <style name="nameStyle">
        <item name="android:padding">8dp</item>
        <item name="android:textSize">30sp</item>
        <item name="android:textStyle">bold</item>
    </style>

    <string name="OR">OR</string>
    <string name="GamesRules1">
        The quiz will contain 6 randomized questions.
    </string>
    <string name="GameRules2">
    Every correct answer scores you 1 points.
   </string>
    <string name="GameRules3">
    your results will be show end of the game.
   </string>
    <string name="save_password">1</string>
    <string name="Log_out">Are you sure want to log out?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="emailsignup">Email</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="signup">SignUp</string>
    <string name="new_password">New Password</string>
    <string name="home1">Home</string>
    <string name="quiz_option">Quiz Option</string>
    <string name="todo">TODO</string>
    <string name="math">Math</string>
    <string name="geography">Geography</string>
    <string name="rules">Rules</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="logout">Logout</string>
    <string name="Username">Username</string>
    <string name="_15_20">12</string>
    <string name="log_out">Log Out</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="Loginemail">Email</string>
    <string name="SplashImage">Image</string>
    <string name="MainActivityhome">Home</string>
    <string name="exit">Exit</string>
    <string name="lokesh_quizz">Lokesh Quizz</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="BackImage">TODO</string>
    <string name="todo12">TODO</string>
    <string name="Resultexit">Exit</string>
    <string name="GoodJOb">TODO</string>
    <string name="opps_time_out">Opps Time Out…</string>
    <string name="Timer">TODO</string>
    <string name="try_again">Try Again</string>
</resources>