<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameRules">

    <TextView
        style="@style/nameStyle"
        android:id="@+id/rules1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/GamesRules1"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_140sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rules1"
        style="@style/nameStyle"
        android:text="@string/GameRules2"
        android:padding="10dp"
        android:id="@+id/rules2"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rules2"
        android:text="@string/GameRules3"
        android:padding="10dp"
        style="@style/nameStyle"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>