<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_gravity="center"
        android:background="#FFC5F3"
        android:backgroundTint="#FFC5F3"
        android:elevation="@dimen/_20sdp"
        app:cardBackgroundColor="#FFC5F3"
        app:cardCornerRadius="@dimen/_10sdp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="248dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                style="@style/nameStyle"
                android:text="@string/Log_out"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_38sdp"
                android:elevation="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/Logout_Button2"
                android:layout_marginEnd="@dimen/_38sdp"
                android:background="@drawable/time_out_button"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:text="@string/cancel"
                android:id="@+id/Logout_Cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>